@@ -47,9 +47,9 @@ EXIT_O = $(patsubst %,exit-%.o, $(EXIT_MCUS))
 
 exit	: $(EXIT_O)
 
-DEP_OPTIONS	= options.def options.h Makefile
-DEPS_LOGGING	= $(DEP_OPTIONS) testavr.h avr-opcode.def sreg.h avrtest.h
-DEPS_LOAD_FLASH = $(DEP_OPTIONS) testavr.h avr-opcode.def
+DEP_OPTIONS	= options.def options.h testavr.h Makefile
+DEPS_LOGGING	= $(DEP_OPTIONS) avr-opcode.def sreg.h avrtest.h
+DEPS_LOAD_FLASH = $(DEP_OPTIONS) avr-opcode.def
 DEPS		= $(DEPS_LOGGING) flag-tables.h
 
 $(A_log:=.s)	: XDEF += -DAVRTEST_LOG
